--- a/index.html
+++ b/index.html
@@ -2,8 +2,140 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Raising: Help Desk</title>
+    <title>Raisin: Help Desk</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
+          integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+    <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
+
+<nav id="top-navigation" class="navbar navbar-expand-lg navbar-light bg-light">
+    <a class="navbar-brand" href="/">
+        <img alt="Raisin Logo" src="assets/img_raisin_logo.png"/>
+    </a>
+    <div class="collapse navbar-collapse" id="navbarNavDropdown">
+        <ul class="navbar-nav">
+            <li class="nav-item dropdown">
+                <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" data-toggle="dropdown"
+                   aria-haspopup="true" aria-expanded="false">
+                    Help Desk
+                </a>
+                <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+                    <a class="dropdown-item" href="#">Action</a>
+                    <a class="dropdown-item" href="#">Action</a>
+                    <a class="dropdown-item" href="#">Action</a>
+                </div>
+            </li>
+        </ul>
+    </div>
+</nav>
+
+<div id="search-bar" class="search-bar">
+    <img alt="Homepage Banner" src="/assets/banner_homepage.png">
+    <div class="search-bar--input">
+        <input type="text">
+    </div>
+</div>
+
+<div id="" class="container">
+    <div class="row">
+        <div class="col-12 col-md-6 col-xl-4 mb-5">
+            <div class="card">
+                <div class="card-header">
+                    <img alt="Card Image Description" src="assets/icon_event_management.png"/>
+                </div>
+                <div class="card-body">
+                    <h2>Card Title</h2>
+                    <p>Lorem impsum dolorem si amet</p>
+                </div>
+                <div class="card-footer">
+                    <a class="btn btn-primary">Start Now</a>
+                </div>
+            </div>
+        </div>
+        <div class="col-12 col-md-6 col-xl-4 mb-5">
+            <div class="card">
+                <div class="card-header">
+                    <img alt="Card Image Description" src="assets/icon_event_management.png"/>
+                </div>
+                <div class="card-body">
+                    <h2>Card Title</h2>
+                    <p>Lorem impsum dolorem si amet</p>
+                </div>
+                <div class="card-footer">
+                    <a class="btn btn-primary">Start Now</a>
+                </div>
+            </div>
+        </div>
+        <div class="col-12 col-md-6 col-xl-4 mb-5">
+            <div class="card">
+                <div class="card-header">
+                    <img alt="Card Image Description" src="assets/icon_event_management.png"/>
+                </div>
+                <div class="card-body">
+                    <h2>Card Title</h2>
+                    <p>Lorem impsum dolorem si amet</p>
+                </div>
+                <div class="card-footer">
+                    <a class="btn btn-primary">Start Now</a>
+                </div>
+            </div>
+        </div>
+        <div class="col-12 col-md-6 col-xl-4 mb-5">
+            <div class="card">
+                <div class="card-header">
+                    <img alt="Card Image Description" src="assets/icon_event_management.png"/>
+                </div>
+                <div class="card-body">
+                    <h2>Card Title</h2>
+                    <p>Lorem impsum dolorem si amet</p>
+                </div>
+                <div class="card-footer">
+                    <a class="btn btn-primary">Start Now</a>
+                </div>
+            </div>
+        </div>
+        <div class="col-12 col-md-6 col-xl-4 mb-5">
+            <div class="card">
+                <div class="card-header">
+                    <img alt="Card Image Description" src="assets/icon_event_management.png"/>
+                </div>
+                <div class="card-body">
+                    <h2>Card Title</h2>
+                    <p>Lorem impsum dolorem si amet</p>
+                </div>
+                <div class="card-footer">
+                    <a class="btn btn-primary">Start Now</a>
+                </div>
+            </div>
+        </div>
+        <div class="col-12 col-md-6 col-xl-4 mb-5">
+            <div class="card">
+                <div class="card-header">
+                    <img alt="Card Image Description" src="assets/icon_event_management.png"/>
+                </div>
+                <div class="card-body">
+                    <h2>Card Title</h2>
+                    <p>Lorem impsum dolorem si amet</p>
+                </div>
+                <div class="card-footer">
+                    <a class="btn btn-primary">Start Now</a>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+
+<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
+        integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
+        crossorigin="anonymous"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"
+        integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q"
+        crossorigin="anonymous"></script>
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"
+        integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
+        crossorigin="anonymous"></script>
+
 </body>
 </html>
